Extracted token-lib, created sso-service